# sot_tasks

./: CMakeLists.txt  package.xml  setup.py
config/: self_collision_full.yaml
include/sot_tasks/: FeatureGraspingPoint.h
src/: CMakeLists.txt  FeatureGraspingPoint.cpp  TaskJointLimitClamping.cpp  TaskJointWeights.cpp  TaskVelocityDamping.cpp
src/dynamic_graph/sot_tasks/: meta_task_grasping_point.py
src/sot_tasks/: __init__.py  meta_task_dynamic_velocity_damping.py  meta_task_grasping_point.py  meta_task_joint_weights.py  meta_task_kine_ineq.py  meta_task_selfcollision_avoidance.py  meta_task_velocity_damping.py  startup_tasks.py
